[gd_scene load_steps=7 format=3 uid="uid://0xgmhgxe4cj"]

[ext_resource type="Script" path="res://still_enemy.gd" id="1_qbni4"]
[ext_resource type="AudioStream" uid="uid://dbsotuk140qux" path="res://SFX/explosion(1).wav" id="2_egimi"]

[sub_resource type="Gradient" id="Gradient_jtci1"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.155556, 0.35873)
colors = PackedColorArray(0, 0, 0, 1, 0.443137, 0, 0, 1, 1, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rwxwt"]
gradient = SubResource("Gradient_jtci1")
width = 32
height = 32
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nj14w"]
size = Vector2(32, 32)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_f4g7j"]
size = Vector2(32, 4)

[node name="Enemy" type="Area2D" groups=["enemy"]]
script = ExtResource("1_qbni4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_rwxwt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_nj14w")

[node name="cooldown" type="Timer" parent="."]
autostart = true

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_egimi")

[node name="HealthBar" type="Sprite2D" parent="."]
position = Vector2(0, -20)
texture = SubResource("PlaceholderTexture2D_f4g7j")

[node name="startTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="startTimer" to="." method="_on_start_timer_timeout"]
